# polymarket-bot

./: .gitignore  ARB_DISABLED  CRYPTO-BINARY-ARB-FINDINGS.md  CRYPTO-BINARY-BUILDER-REPORT.md  Cargo.toml  DIRECTIVE-v1.md  DIRECTIVE-v2.md  DIRECTIVE-v3.md  HEALTH-LOG.json  LESSONS.md  MARKETS.md  OPPORTUNITIES.json  POSITION-SYNC-FIX.md  RH_DISABLED  RISK-REVIEW.json  STRATEGY-TRACKER.json  TRADES.md  TRADING-STATE.json  arb-executed.json  arb-results.json  arb-scanner-backtest.json  arb-scanner.js  backtest-weather.js  binary-arb-results.json  cross-platform-results.json  crypto-binary-opportunities.json  crypto-binary-paper-trade.js  crypto-binary-paper-trades.json  crypto-binary-scanner.js  crypto-tail-paper-trade.js  directional-candidates.json  directional-paper.json  directional-scanner.js  ecosystem.config.js  enrichment.js  event-scanner-log.json  event-scanner.js  exit-ledger.json  fill-stats.json  live-snapshot.json  (+43 more)
backtest/: backtest.js
daily-reports/: 2026-02-13.json  2026-02-14.json  2026-02-15.json  2026-02-16.json
dashboard/: app.js  index.html  server.js  style.css  vercel.json
dashboard-app/: middleware.js  vercel.json
executor/: alerts.json  binary-arb-scanner.js  crypto-15min-scanner.js  daily-brief.js  daily-conviction-budget.json  dr-manhattan-intel.js  event-map.json  exit-ledger.js  fetch-trade-history.js  index.js  manual-positions.json  market-names.json  market-utils.js  package-lock.json  package.json  pmxt.js  position-ledger.js  push-snapshot.sh  recently-sold.json  record-pnl.js  rejected-opportunities.json  safe-write.js  start.sh  (+9 more)
(+40 files in other folders)
